--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "howler": "^2.2.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-responsive": "^10.0.0",
     "sass": "^1.81.0",
     "three": "^0.170.0"
   },
